--- a/src/main/resources/templates/fragments/topbar.html
+++ b/src/main/resources/templates/fragments/topbar.html
@@ -14,7 +14,6 @@
     <!-- Informações do administrador -->
 	<span  th:if="${session.usuarioLogado != null}">
 		<a class="w3-bar-item w3-button" href="/admin" title="ADMIN">ADMIN
-		
 		</a>
    	</span>
 
@@ -26,7 +25,15 @@
 	</span>
 
 	<span  th:if="${session.usuarioLogado != null}">
-		<a class="text-gray-700" th:href="@{/livros/venda}"data-toggle="tooltip" data-html="true" data-placement="top" title="Pedidos"  ><i class="  fa fas fa-shopping-cart mr-0"></i><span th:if="${session.usuarioLogado.carrinho != null}" th:text="${session.usuarioLogado.carrinho.itensQuantidade}"></span></a>
+		<a class="text-gray-700" 
+				th:href="@{/carrinho}" 
+				data-toggle="tooltip" 
+				data-html="true" 
+				data-placement="top" 
+				title="Pedidos"  >
+			<i class="  fa fas fa-shopping-cart mr-0"></i>
+			
+		</a>
 
 		<!-- Informações do usuário -->
     	<a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span th:text="${session.usuarioLogado.nome}"></span>
@@ -37,14 +44,14 @@
 	     	<span th:if="${session.usuarioLogado.foto == null}">
 	       	<img width="30" class="img-profile rounded-circle" src="/img/user.png">
 	     	</span>
-			</a>
-		 	<!-- Dropdown - Usuário informações -->
-				<div class="dropdown-menu dropdown-menu-button-dark shadow animated--grow" aria-labelledby="userDropdown">
-					<a class="dropdown-item text-gray-700" href="/usuario/perfil"> <i class="fas fa-user fa-sm fa-fw mr-0 text-green-400"></i>Perfil</a>
-					<a class="dropdown-item text-gray-700" href="#"><i class="fas fa-cogs fa-sm fa-fw mr-0 text-gray-400"></i>Lista de Desejos</a>
-					<div class="dropdown-divider"></div>
-					<a class="dropdown-item text-gray-700" href="#" data-toggle="modal" data-target="#logoutModal"> <i class="fas fa-sign-out-alt fa-sm fa-fw mr-0 text-gray-400"></i>Sair</a>
-				</div>
+		</a>
+		<!-- Dropdown - Usuário informações -->
+			<div class="dropdown-menu dropdown-menu-button-dark shadow animated--grow" aria-labelledby="userDropdown">
+				<a class="dropdown-item text-gray-700" href="/usuario/perfil"> <i class="fas fa-user fa-sm fa-fw mr-0 text-green-400"></i>Perfil</a>
+				<a class="dropdown-item text-gray-700" href="#"><i class="fas fa-cogs fa-sm fa-fw mr-0 text-gray-400"></i>Lista de Desejos</a>
+				<div class="dropdown-divider"></div>
+				<a class="dropdown-item text-gray-700" href="#" data-toggle="modal" data-target="#logoutModal"> <i class="fas fa-sign-out-alt fa-sm fa-fw mr-0 text-gray-400"></i>Sair</a>
+			</div>
 	</span>		
 	<script th:src="@{/vendor/jquery/jquery.min.js}"></script>
 	<script>
